...
                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bdb-DO-lKT">
                                                    <rect key="frame" x="119" y="9" width="137" height="41"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="ViewInstructionButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="41" id="0Zz-do-rsc"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                                    <state key="normal" title="View Instruction"/>
                                                    <connections>
                                                        <action selector="didTapOnViewInstructionButtonWithSender:" destination="THe-K1-Aje" eventType="touchUpInside" id="DRj-e3-W01"/>
                                                    </connections>
                                                </button>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rBg-qN-Lhi">
                                                    <rect key="frame" x="131.5" y="55" width="112" height="37"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="ViewOriginalButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="37" id="6fT-Pz-8D4"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                                    <state key="normal" title="View Original"/>
                                                    <connections>
...
