...
    // MARK: - UI Setup methods
    
    func setUpTableView()  {
        tableView.rowHeight = UITableView.automaticDimension
        tableView.estimatedRowHeight = 600
        tableView.tableFooterView = UIView()
        tableView.accessibilityIdentifier = "RecipeDetailsTableViewIdentifier"

    }
}

extension RecipeDetailsViewController: UITableViewDataSource, UITableViewDelegate {
    
...
